<resources>
    <string name="app_name">Cafe Review</string>
    <string name="commons">COMMONS</string>
    <string name="cuisine_fusion">CUISINE: Fusion</string>
    <string name="commons_image">commons_image</string>
    <string name="address">Address</string>
    <string name="address_view">address_view</string>
    <string name="the_address">The Old Court House, Jalan Tun Abang Haji Openg, Kuching, 93000 Kuching, Sarawak</string>
    <string name="opening_hour">Opening Hours</string>
    <string name="clock_view">clock_view</string>
    <string name="clock_text">Monday - Sunday | 10:00 am - 11:00 pm</string>
    <string name="reviews">Reviews</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="drinks_view">drinks_view</string>
    <string name="food_view">food_view</string>
    <string name="food_rating">food_rating</string>
    <string name="drinks_rating">drinks_rating</string>
    <string name="service_view">service_view</string>
    <string name="service">Service</string>
    <string name="ambience_view">ambiance_view</string>
    <string name="ambience">Ambience</string>
    <string name="service_rating">service_rating</string>
    <string name="ambience_rating">ambience_rating</string>
</resources>